--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+
 @import 'colors/typography-light';
 @import 'colors/typography-dark';
 @import 'addon/variables';
@@ -14,9 +16,9 @@
 
 // @import url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.css');
 
-@font-face {
-    font-family: 'GmarketSansMedium';
-    src: url('/assets/font/Gmarket Sans Medium.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
+// @font-face {
+//     font-family: 'GmarketSansMedium';
+//     src: url('/assets/font/Gmarket Sans Medium.woff') format('woff');
+//     font-weight: normal;
+//     font-style: normal;
+// }
