--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -36,6 +36,7 @@ body {
   color: var(--text-color);
   -webkit-font-smoothing: antialiased;
   font-family: $font-family-base;
+  font-weight: $font-weight-medium;
 }
 
 /* --- Typography --- */
