--- a/_sass/addon/variables.scss
+++ b/_sass/addon/variables.scss
@@ -22,7 +22,6 @@ $base-radius: 0.625rem !default;
 $back2top-size: 2.75rem !default;
 
 /* syntax highlight */
-
 $code-font-size: 0.85rem !default;
 $code-header-height: 2.25rem !default;
 $code-dot-size: 0.75rem !default;
@@ -31,6 +30,13 @@ $code-icon-width: 1.75rem !default;
 
 /* fonts */
 // $font-family-base: 'Source Sans Pro', 'Microsoft Yahei', sans-serif !default;
-$font-family-base: Lato, 'GmarketSansMedium' !default;
+$font-family-base: 'Inter', 'Source Sans Pro', sans-serif;
 // $font-family-heading: Lato, 'Microsoft Yahei', sans-serif !default;
-$font-family-heading: Lato, 'GmarketSansMedium', sans-serif !default;
+$font-family-heading: 'Inter', 'Source Sans Pro', sans-serif;
+
+
+/* Font Weights */
+$font-weight-normal: 400 !default;
+$font-weight-medium: 500 !default;
+$font-weight-semibold: 550 !default;
+$font-weight-bold: 700 !default;
