--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -50,13 +50,13 @@
     </ul>
   </nav>
   <!-- Counter Badge -->
-  <div class="counter-badge">
+  <!-- <div class="counter-badge">
     <a href="https://hits.seeyoufarm.com">
       <img
         src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fhan-0315.github.io&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=Visitors&edge_flat=false"
         alt="Visitors" />
     </a>
-  </div>
+  </div> -->
   <!-- .sidebar-badge -->
 
   <div class="sidebar-bottom d-flex flex-wrap  align-items-center w-100">
